fixed column alignment on plan page

--- a/styles/css/plan.css
+++ b/styles/css/plan.css
@@ -5,8 +5,11 @@ body {
 }
 
 footer {
+    position: absolute;
+    bottom: 0;
     text-align: center;
     padding: 3px;
     background-color: DarkSalmon;
     color: white;
 }
+
